--- a/D-wave_Embedding.ipynb
+++ b/D-wave_Embedding.ipynb
@@ -13,7 +13,7 @@
     "from dwave.system import DWaveSampler, EmbeddingComposite\n",
     "\n",
     "# D-Wave API設定\n",
-    "token = 'DEV-40b065cd4e4bd8631ee3ce0e8cf16a9ad24e1372'\n",
+    "token = 'your-token'\n",
     "endpoint = 'https://cloud.dwavesys.com/sapi/'\n",
     "\n",
     "# プレイヤー数と選択肢の設定\n",
