--- a/D-wave_test_linear.ipynb
+++ b/D-wave_test_linear.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "# D-waveの設定\n",
     "sampler = EmbeddingComposite(DWaveSampler(endpoint='https://cloud.dwavesys.com/sapi',\n",
-    "                                          token='DEV-40b065cd4e4bd8631ee3ce0e8cf16a9ad24e1372',\n",
+    "                                          token='yourtoken',\n",
     "                                          solver='Advantage_system6.4'))\n",
     "\n",
     "num_reads_list = [100]\n",
